--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <header>
           <span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
           <h1 id="logo"><a href="#">Michael Bottom</a></h1>
-          <p>Cooperating Graduate Faculty, </br> Institute for Astronomy, </br>University of Hawaii</p>
+          <p>Assistant professor, </br> Department of Astronomy, </br>University of California, Berkeley</p>
 
         </header>
         <nav id="nav">
@@ -248,13 +248,9 @@ document.addEventListener('DOMContentLoaded', function() {
                     <!--<h2>Read Only</h2>-->
                   </header>
                   <p>
-<u>Please note: I am no longer regular faculty at the IfA, having relocated to UC Berkeley.  I will not be accepting any further students from the University of Hawai`i.</u>
+I'm an experimental astrophysicist working in the field of exoplanet imaging. The goals of my research group are the detection and characterization of planets around other stars, which we pursue by building, developing, and using new instruments. Our main research efforts focus on developing infrared detectors and instrument concepts for the <a href="https://science.nasa.gov/astrophysics/programs/habitable-worlds-observatory/">Habitable Worlds Observatory</a>, adaptive optics instrumentation for large ground-based telescopes like <a href="https://www.keckobservatory.org/">Keck</a> and <a href="https://subarutelescope.org/en/">Subaru</a>, and observing disks and planets using the most advanced ground-based telescopes in the world.
 <br><br>
-I'm an experimental astrophysicist working in the field of exoplanet imaging. The goals of my research group are the detection and characterization of planets around other stars, which we pursue by building, developing, and using new instruments. Our main research efforts focus on developing infrared detectors and instrument concepts for the <a href="https://science.nasa.gov/astrophysics/programs/habitable-worlds-observatory/">Habitable Worlds Observatory</a>, adaptive optics instrumentation for large ground-based telescopes like <a href="https://www.keckobservatory.org/">Keck</a> and <a href="https://subarutelescope.org/en/">Subaru</a>, and observing disks and planets using the outstanding telescope resources on Maunakea.
-<br><br>
-Prior to joining the faculty of the IfA, I was an optical engineer at NASA's <a href="https://www.jpl.nasa.gov">Jet Propulsion Lab</a>, working on developing the <a href="https://www.jpl.nasa.gov/missions/the-nancy-grace-roman-space-telescope/">Roman Coronagraph</a>, formation flying for the <a href="https://exoplanets.nasa.gov/exep/technology/starshade/">Starshade</a> mission, wavefront sensing for large ground-based telescopes, and new post-processing algorithms for exoplanet imaging.
-<br><br>
-I received a PhD in astrophysics from <a href="https://www.caltech.edu/">Caltech</a> and did my undergraduate studies at <a href="https://www.columbia.edu">Columbia.</a><br>
+Prior to joining the faculty of the UC Berkeley, I was an astronomer at the <a href = "https://www.ifa.hawaii.edu/">Institute for Astronomy in Hilo, Hawai`i</a> and an optical engineer at NASA's <a href="https://www.jpl.nasa.gov">Jet Propulsion Lab</a>.  I received a PhD in astrophysics from <a href="https://www.caltech.edu/">Caltech</a> and did my undergraduate studies at <a href="https://www.columbia.edu">Columbia.</a><br>
 
             </p>
                 </div>
