--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ https://science.nasa.gov/astrophysics/programs/habitable-worlds-observatory/news
               <section id="contact">
                 <div class="container">
                   <h3>Contact Me</h3>
-                  <p>Email is the best way to reach me; (first initial)(last name) at hawaii dot edu
+                  <p>Email is the best way to reach me; (first initial)(last name) at berkeley dot edu
               </section>
             <!-- Five -->
             <!--
